fix: show actions on mobile screen Fix #293

--- a/frontend/containers/DocumentListToolbar/DocumentListToolbar.css
+++ b/frontend/containers/DocumentListToolbar/DocumentListToolbar.css
@@ -38,11 +38,5 @@
 }
 
 .actions {
-  display: none;
-}
-
-@media (--breakpoint-large) {
-  .actions {
-    display: block;
-  }
+  text-align: center;
 }
